--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,15 @@
-name: Build and Push to ECR
+name: Build and Push to Docker Hub
 
 on:
   push:
     branches:
-      - master 
-      
+      - main 
+
 permissions:
-  id-token: write   # Required for OIDC
   contents: read
 
 env:
-  AWS_REGION: us-east-1
-  ECR_REPOSITORY: php-app   # ✅ matches your repo name in ECR
+  DOCKERHUB_REPO: your-dockerhub-username/php-app # update with your Docker Hub username/repo
 
 jobs:
   build-and-push:
@@ -21,34 +19,24 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
-      # Configure AWS credentials via OIDC
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      # Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ env.AWS_REGION }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Log in to Amazon ECR
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-      # Build, tag, and push image
-      - name: Build, Tag, and Push Docker Image
+      # Build and push image
+      - name: Build and Push Docker Image
         run: |
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          ECR_REGISTRY=$ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
           IMAGE_TAG=${{ github.sha }}
+          echo "Building image: ${{ env.DOCKERHUB_REPO }}:$IMAGE_TAG"
 
-          echo "Building image: $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG"
+          docker build -t ${{ env.DOCKERHUB_REPO }}:$IMAGE_TAG .
+          docker push ${{ env.DOCKERHUB_REPO }}:$IMAGE_TAG
 
-          docker build -t $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
-
-      # (Optional) Tag as "latest" too
+      # (Optional) Tag as "latest"
       - name: Tag as latest
         run: |
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          ECR_REGISTRY=$ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
-          docker tag $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:${{ github.sha }} $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:latest
-          docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:latest
+          docker tag ${{ env.DOCKERHUB_REPO }}:${{ github.sha }} ${{ env.DOCKERHUB_REPO }}:latest
+          docker push ${{ env.DOCKERHUB_REPO }}:latest
