--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=movie-app.cqjo8i22o4uy.us-east-1.rds.amazonaws.com
+DB_HOST=movie-app.clbdj44v7c4x.us-east-1.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=movie-app
 DB_USERNAME=admin
