--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,36 +46,18 @@ jobs:
           docker push $IMAGE
           echo "NEW_IMAGE=$IMAGE" >> $GITHUB_ENV
 
-      - name: Update ECS Task Definition
-        run: |
-          # Fetch current task definition
-          aws ecs describe-task-definition \
-            --task-definition $ECS_TASK_FAMILY \
-            --query taskDefinition > task-def.json
+      - name: Render new ECS task definition
+        id: render-task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: soham-php-laravel-backend-revision.json   # keep a base task-def file in repo
+          container-name: php-laravel-backend    # must match your container name in ECS
+          image: ${{ env.IMAGE }}
 
-          # Remove read-only fields
-          cat task-def.json | jq 'del(
-            .taskDefinitionArn,
-            .revision,
-            .status,
-            .requiresAttributes,
-            .compatibilities,
-            .registeredAt,
-            .registeredBy
-          )' > new-task-def.json
-
-          # Update image
-          jq --arg IMAGE "$NEW_IMAGE" \
-            '.containerDefinitions[0].image = $IMAGE' new-task-def.json \
-            > final-task-def.json
-
-          # Register new revision
-          aws ecs register-task-definition \
-            --cli-input-json file://final-task-def.json
-
-      - name: Deploy to ECS
-        run: |
-          aws ecs update-service \
-            --cluster $ECS_CLUSTER \
-            --service $ECS_SERVICE \
-            --force-new-deployment
+      - name: Deploy to ECS service
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.render-task-def.outputs.task-definition }}
+          service: ${{ env.ECS_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
