--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,15 +7,9 @@ on:
 
 permissions:
   contents: read
-  id-token: write
 
 env:
   DOCKERHUB_REPO: sohampa/php-backend-laravel
-  AWS_REGION: us-east-1
-  ECS_CLUSTER: soham-php-laravel-app
-  ECS_SERVICE: soham-php-laravel-backend-service
-  ECS_TASK_FAMILY: soham-php-laravel-backend
-  # AWS_ROLE_TO_ASSUME: arn:aws:iam::543816070942:role/Soham-OIDC-Role
 
 jobs:
   build-and-push:
@@ -25,12 +19,6 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::543816070942:role/Soham-OIDC-Role
-          aws-region: us-east-1
-
       # Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -39,26 +27,16 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       # Build and push image
-      - name: Build & Push Backend Image
+      - name: Build and Push Docker Image
         run: |
-          IMAGE=${{ env.DOCKERHUB_REPO }}:${{ github.sha }}
-          docker build -t $IMAGE .
-          docker push $IMAGE
-          echo "IMAGE=$IMAGE" >> $GITHUB_ENV
-      
-      - name: Render new ECS task definition
-        id: render-task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: soham-php-laravel-backend-revision.json   # base JSON stored in repo
-          container-name: php-laravel-backend
-          image: ${{ env.IMAGE }}
+          IMAGE_TAG=${{ github.sha }}
+          echo "Building image: ${{ env.DOCKERHUB_REPO }}:$IMAGE_TAG"
 
+          docker build -t ${{ env.DOCKERHUB_REPO }}:$IMAGE_TAG .
+          docker push ${{ env.DOCKERHUB_REPO }}:$IMAGE_TAG
 
-      - name: Deploy to ECS service
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: ${{ steps.render-task-def.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE }}
-          cluster: ${{ env.ECS_CLUSTER }}
-          wait-for-service-stability: true
+      # (Optional) Tag as "latest"
+      - name: Tag as latest
+        run: |
+          docker tag ${{ env.DOCKERHUB_REPO }}:${{ github.sha }} ${{ env.DOCKERHUB_REPO }}:latest
+          docker push ${{ env.DOCKERHUB_REPO }}:latest
