--- a/.env.example
+++ b/.env.example
@@ -20,9 +20,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=movie-app.clbdj44v7c4x.us-east-1.rds.amazonaws.com
+DB_HOST=shubhamdatabase.clbdj44v7c4x.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=movie-app
+DB_DATABASE=shubhamdatabase
 DB_USERNAME=admin
 DB_PASSWORD=Shubham1997
 
